meson: reuse f strings where possible
With meson 0.61 we can use f strings, over the explicit .format().
Multi-line f-strings are introduced with meson 0.63, which we don't
require yet, plus it's not like we have many instances.

Signed-off-by: Emil Velikov <emil.l.velikov@gmail.com>
Reviewed-by: Lucas De Marchi <demarchi@kernel.org>
Link: https://github.com/kmod-project/kmod/pull/pull/400
Signed-off-by: Lucas De Marchi <demarchi@kernel.org>

--- a/libkmod/docs/meson.build
+++ b/libkmod/docs/meson.build
@@ -10,12 +10,12 @@ built_docs = gnome.gtkdoc(
   'libkmod',
   content_files : version_file,
   ignore_headers : [
-    '@0@/libkmod/libkmod-index.h'.format(meson.project_source_root()),
-    '@0@/libkmod/libkmod-internal-file.h'.format(meson.project_source_root()),
-    '@0@/libkmod/libkmod-internal.h'.format(meson.project_source_root()),
+    f'@project_source_root@/libkmod/libkmod-index.h',
+    f'@project_source_root@/libkmod/libkmod-internal-file.h',
+    f'@project_source_root@/libkmod/libkmod-internal.h',
   ],
   scan_args : '--ignore-decorators="KMOD_EXPORT"',
-  src_dir : '@0@/libkmod/'.format(meson.project_source_root()),
+  src_dir : f'@project_source_root@/libkmod/',
   namespace : 'kmod',
   module_version : '3',
   main_xml : 'libkmod-docs.xml',
