man: de-duplicate AUTHOR/BUGS sections
Move the sections into a dedicated trailer.scd file, which gets added
during manpage generation.

Note, that this removes the following text from kmod.8, which is
intentional:

*kmod* project was started by Lucas De Marchi as a drop-in replacement to
module-init-tools that was maintained by Jon Masters, adding a library (libkmod)
and additional features.

Signed-off-by: Emil Velikov <emil.l.velikov@gmail.com>
Reviewed-by: Lucas De Marchi <demarchi@kernel.org>
Link: https://github.com/kmod-project/kmod/pull/pull/400
Signed-off-by: Lucas De Marchi <demarchi@kernel.org>

--- a/man/meson.build
+++ b/man/meson.build
@@ -21,12 +21,12 @@ foreach tuple : _man_pages
     command : [
       build_scdoc,
       scdoc,
-      '@INPUT@',
       's|@SYSCONFDIR@|@0@|g;'.format(sysconfdir) +
       's|@DISTCONFDIR@|@0@|g;'.format(distconfdir) +
       's|@MODULE_DIRECTORY@|@0@|g;'.format(moduledir),
+      '@INPUT@',
     ],
-    input : f'@man@.@section@.scd',
+    input : [f'@man@.@section@.scd', files('trailer.scd')],
     output : f'@man@.@section@',
     capture : true,
     install : true,
