meson: use identical ln arguments internally
Update the internal symlinks to also use -r/--relative, just like the
installed ones.

Signed-off-by: Emil Velikov <emil.l.velikov@gmail.com>
Reviewed-by: Lucas De Marchi <demarchi@kernel.org>
Link: https://github.com/kmod-project/kmod/pull/pull/400
Signed-off-by: Lucas De Marchi <demarchi@kernel.org>

--- a/meson.build
+++ b/meson.build
@@ -495,7 +495,7 @@ if get_option('tools')
 
     internal_kmod_symlinks += custom_target(
       tool,
-      command : ['ln', '-sf', kmod, '@OUTPUT@'],
+      command : ['ln', '-sfr', kmod, '@OUTPUT@'],
       output : tool,
       depends : kmod,
       build_by_default : true,
